--- a/src/assets/scss/_theme.module.scss
+++ b/src/assets/scss/_theme.module.scss
@@ -8,6 +8,26 @@ $primaryDark: #041f3b;
 $primary200: #cdd5dd;
 $primary800: #010911;
 
+// ==============================|| DARK THEME ||============================== //
+
+// paper & background
+$darkPaper: #0f1010;
+$darkMain: #071a33;
+
+// primary dark
+$darkPrimaryLight: #e2e5e8;
+$darkPrimaryMain: #54657b;
+$darkPrimaryDark: #2f445e;
+$darkPrimary200: #8591a1;
+$darkPrimary800: #05152b;
+
+// text variants
+$darkTextTitle: #d7dcec;
+$darkTextPrimary: #bdc8f0;
+$darkTextSecondary: #88b5dc;
+
+// ==============================|| COMMON ||============================== //
+
 // secondary
 $secondaryLight: #ebf8ff;
 $secondaryMain: #3ABBFF;
@@ -26,10 +46,10 @@ $errorLight: #ef9a9a;
 $errorMain: #f44336;
 $errorDark: #c62828;
 
-// orange
-$orangeLight: #fbe9e7;
-$orangeMain: #ffab91;
-$orangeDark: #d84315;
+// info
+$infoLight: #03a9f4;
+$infoMain: #086496;
+$infoDark: #01579b;
 
 // warning
 $warningLight: #fff8e1;
@@ -45,35 +65,6 @@ $grey500: #9e9e9e;
 $grey600: #757575;
 $grey700: #616161;
 $grey900: #212121;
-
-// ==============================|| DARK THEME ||============================== //
-
-// paper & background
-$darkBackground: #051327; // level 3
-$darkPaper: #030c1d; // level 4
-
-// dark 800 & 900
-$darkLevel1: #071a33; // level 1
-$darkLevel2: #091f3c; // level 2
-
-// primary dark
-$darkPrimaryLight: #e2e5e8;
-$darkPrimaryMain: #54657b;
-$darkPrimaryDark: #2f445e;
-$darkPrimary200: #8591a1;
-$darkPrimary800: #05152b;
-
-// secondary dark
-$darkSecondaryLight: $secondaryLight;
-$darkSecondaryMain: $secondaryMain;
-$darkSecondaryDark: $secondaryDark;
-$darkSecondary200: $secondary200;
-$darkSecondary800: $secondary800;
-
-// text variants
-$darkTextTitle: #d7dcec;
-$darkTextPrimary: #bdc8f0;
-$darkTextSecondary: #88b5dc;
 
 // ==============================|| JAVASCRIPT ||============================== //
 
@@ -106,10 +97,10 @@ $darkTextSecondary: #88b5dc;
     errorMain: $errorMain;
     errorDark: $errorDark;
 
-    // orange
-    orangeLight: $orangeLight;
-    orangeMain: $orangeMain;
-    orangeDark: $orangeDark;
+    // info
+    infoLight: $infoLight;
+    infoMain: $infoMain;
+    infoDark: $infoDark;
 
     // warning
     warningLight: $warningLight;
@@ -130,11 +121,7 @@ $darkTextSecondary: #88b5dc;
 
     // paper & background
     darkPaper: $darkPaper;
-    darkBackground: $darkBackground;
-
-    // dark 800 & 900
-    darkLevel1: $darkLevel1;
-    darkLevel2: $darkLevel2;
+    darkMain: $darkMain;
 
     // text variants
     darkTextTitle: $darkTextTitle;
@@ -147,11 +134,4 @@ $darkTextSecondary: #88b5dc;
     darkPrimaryDark: $darkPrimaryDark;
     darkPrimary200: $darkPrimary200;
     darkPrimary800: $darkPrimary800;
-
-    // secondary dark
-    darkSecondaryLight: $darkSecondaryLight;
-    darkSecondaryMain: $darkSecondaryMain;
-    darkSecondaryDark: $darkSecondaryDark;
-    darkSecondary200: $darkSecondary200;
-    darkSecondary800: $darkSecondary800;
 }
